# casparser-isin

./: .codecov.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: codeql-analysis.yml  pypi-publish.yml  run-pytest.yml
casparser_isin/: VERSION.txt  __init__.py  __version__.py  cli.py  isin.db  isin.py  mf_isin.py  mfisin.py  utils.py
tests/: common.py  conftest.py  fixtures.csv  test_cli.py  test_isin.py  test_utils.py
tests/tools/: conftest.py  test_bse_optional.py  test_builder.py  test_fetchers.py  test_guards.py  test_invariants.py
tools/: README.md  update_isin_db.py
tools/cptools/: b2.py  builder.py  constants.py  http.py  settings.py  utils.py
tools/cptools/fetchers/: amfi.py  bse.py  isin.py
tools/files/: AMFI_NAV_31Jan2018.txt  franklin_funds.csv
