[project]
name = "casparser_isin"
description = "ISIN database for casparser"
authors = [{ name = "Sandeep Somasekharan", email = "codereverser@gmail.com" }]
requires-python = "~=3.9"
readme = "README.md"
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "packaging>=20.9",
    "rapidfuzz>=3.12.0,<4",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/codereverser/casparser-isin"

[project.scripts]
casparser-isin = "casparser_isin.cli:main"

[dependency-groups]
dev = [
    "coverage[toml]>=7.3.0,<8",
    "pytest>=7.4.0,<8",
    "pytest-cov>=4.1.0,<5",
    "apsw>=3.43.0,<4",
    "b2sdk>=1.24.0,<2",
    "lxml>=5.3.1,<6",
    "python-dotenv>=1.0.0,<2",
    "requests>=2.31.0,<3",
    "requests-cache>=1.1.0,<2",
    "pre-commit>=3.4.0,<4",
]

[tool.hatch.build.targets.sdist]
include = ["CHANGELOG.md", "casparser_isin/isin.db"]

[tool.hatch.build.targets.wheel]
include = ["CHANGELOG.md", "casparser_isin/isin.db"]

[tool.hatch.version]
path = "casparser_isin/__init__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=casparser_isin --cov-config=tox.ini --cov-report=xml --cov-report=html --exitfirst"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.poetry-version-plugin]
source = "init"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
