[project]
name = "casparser_isin"
description = "ISIN database for casparser"
authors = [{ name = "Sandeep Somasekharan", email = "codereverser@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = [
    "packaging>=24.0",
    "rapidfuzz>=3.14.0,<4",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/codereverser/casparser-isin"

[project.scripts]
casparser-isin = "casparser_isin.cli:main"

[dependency-groups]
dev = [
    "coverage[toml]>=7.10.0,<8",
    "pytest>=8.0.0,<10",
    "pytest-cov>=6.0.0,<8",
    "apsw>=3.50.0,<4",
    "b2sdk>=2.10.0,<3",
    "lxml>=6.0.0,<7",
    "python-dotenv>=1.1.0,<2",
    "requests>=2.32.0,<3",
    "requests-cache>=1.2.0,<2",
    "pre-commit>=4.0.0,<5",
]

[tool.hatch.build.targets.sdist]
include = ["CHANGELOG.md", "casparser_isin"]

[tool.hatch.build.targets.wheel]
include = ["CHANGELOG.md", "casparser_isin"]

[tool.hatch.version]
path = "casparser_isin/__init__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--cov=casparser_isin --cov-report=xml --cov-report=html --exitfirst"
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = ["casparser_isin/cli.py"]

[tool.coverage.report]
precision = 2

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
