[metadata]
name = casparser_isin
version = file:casparser_isin/VERSION.txt
description = ISIN database for casparser
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
author = Sandeep Somasekharan
author_email = codereverser@gmail.com
url = https://github.com/codereverser/casparser-isin
keywords = pdf, parser, cas, cams, karvy, kfintech, isin
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = casparser_isin
python_requires = >=3.8
install_requires =
    packaging~=20.9
    rapidfuzz~=0.14.2

[options.entry_points]
console_scripts =
    casparser-isin = casparser_isin.cli:main

[options.extras_require]
test = pytest-cov>=2.10.1; coverage>=5.3; pytest>=6.1.2

[options.package_data]
* = *.db, VERSION.txt

[flake8]
max-line-length = 100

[coverage:run]
omit =
    **/cli.py

[coverage:report]
precision = 2